--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
             integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
             crossorigin="anonymous" />
-      <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="css/style.css">
         <script src="https://cdn.jsdelivr.net/npm/vue"></script>
         <title>Todo</title>
     </head>
     <body>
-
-
+      <img src="logo.png" alt="">
       <div id="app" class="container">
-        <input  v-model="newTodo" placeholder="Inserisci un attività" @keyup.enter="add">
-        <button type="button" name="button" @click="add" >Aggiungi </button>
+        <input type="text"  v-model="newTodo" placeholder="Inserisci un attività" @keyup.enter="add">
+        <button type="button" name="button" @click="add" >Aggiungi </button> <br>
         <div class="output" v-for="(item, index) in todo">
           {{todo[index]}}
           <i class="fas fa-times" @click="remove(index)"></i>
